--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[13, 5, 6, 60, 11, 98, 91, 39, 24, 26, 67, 52, 79, 87, 35, 88, 32, 53, 28, 99, 92, 95, 61, 46, 22, 70, 43, 3, 2, 25, 84, 75, 1, 56, 90, 41, 8, 30, 15, 44, 55, 59, 97, 49, 9, 38, 62, 36, 64, 71, 37, 31, 93, 50, 72, 58, 78, 45, 27, 74, 85, 10, 47, 82, 40, 80, 81, 86, 63, 96, 65, 54, 57, 94, 16, 18, 12, 73, 29, 69]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "import random\n",
+    "sample_list_1=random.sample(range(100), k=80) #all elements are unique\n",
+    "print(sample_list_1)\n",
+    "\n"
    ]
   },
   {
@@ -54,11 +66,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 5, 6, 8, 9, 10, 11, 12, 13, 15, 16, 18, 22, 24, 25, 26, 27, 28, 29, 30, 31, 32, 35, 36, 37, 38, 39, 40, 41, 43, 44, 45, 46, 47, 49, 50, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 67, 69, 70, 71, 72, 73, 74, 75, 78, 79, 80, 81, 82, 84, 85, 86, 87, 88, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 = set(sample_list_1)\n",
+    "print(set1)"
    ]
   },
   {
@@ -76,12 +98,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[72, 20, 28, 74, 17, 76, 79, 7, 75, 28, 17, 56, 5, 25, 96, 80, 29, 94, 80, 52, 42, 90, 23, 24, 29, 10, 62, 71, 89, 7, 34, 83, 78, 44, 14, 28, 85, 66, 86, 94, 57, 32, 40, 69, 11, 23, 75, 8, 12, 19, 25, 64, 26, 6, 84, 30, 63, 72, 96, 2, 31, 50, 95, 6, 92, 70, 35, 92, 74, 68, 96, 48, 6, 78, 73, 12, 8, 74, 56, 88]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "import random\n",
+    "sample_list_2=[]\n",
+    "\n",
+    "for i in range(0,80):\n",
+    "    number = random.randrange(100)\n",
+    "    sample_list_2.append(number)\n",
+    "    \n",
+    "print(sample_list_2)"
    ]
   },
   {
@@ -93,11 +136,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 5, 6, 7, 8, 10, 11, 12, 14, 17, 19, 20, 23, 24, 25, 26, 28, 29, 30, 31, 32, 34, 35, 40, 42, 44, 48, 50, 52, 56, 57, 62, 63, 64, 66, 68, 69, 70, 71, 72, 73, 74, 75, 76, 78, 79, 80, 83, 84, 85, 86, 88, 89, 90, 92, 94, 95, 96}\n",
+      "58\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2 = set(sample_list_2)\n",
+    "print(set2)\n",
+    "print(len(set2))"
    ]
   },
   {
@@ -108,12 +163,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your code here\n"
+    "set3={}\n",
+    "list3 = list(set3)\n",
+    "for i in set1:\n",
+    "    if i in set2:\n",
+    "        list3.append(i)\n",
+    "print(list3)"
    ]
   },
   {
@@ -125,11 +183,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{34, 66, 68, 7, 42, 76, 14, 48, 17, 19, 20, 83, 23, 89}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4=set2.difference(set1)\n",
+    "print(set4)"
    ]
   },
   {
@@ -141,11 +209,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 5, 6, 8, 10, 11, 12, 24, 25, 26, 28, 29, 30, 31, 32, 35, 40, 44, 50, 52, 56, 57, 62, 63, 64, 69, 70, 71, 72, 73, 74, 75, 78, 79, 80, 84, 85, 86, 88, 90, 92, 94, 95, 96}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1={1, 2, 3, 5, 6, 8, 9, 10, 11, 12, 13, 15, 16, 18, 22, 24, 25, 26, 27, 28, 29, 30, 31, 32, 35, 36, 37, 38, 39, 40, 41, 43, 44, 45, 46, 47, 49, 50, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 67, 69, 70, 71, 72, 73, 74, 75, 78, 79, 80, 81, 82, 84, 85, 86, 87, 88, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n",
+    "set2={2, 5, 6, 7, 8, 10, 11, 12, 14, 17, 19, 20, 23, 24, 25, 26, 28, 29, 30, 31, 32, 34, 35, 40, 42, 44, 48, 50, 52, 56, 57, 62, 63, 64, 66, 68, 69, 70, 71, 72, 73, 74, 75, 76, 78, 79, 80, 83, 84, 85, 86, 88, 89, 90, 92, 94, 95, 96}\n",
+    "set5=set1.intersection(set2)\n",
+    "print(set5)"
    ]
   },
   {
@@ -181,11 +261,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6={}"
    ]
   },
   {
@@ -197,11 +278,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4={34, 66, 68, 7, 42, 76, 14, 48, 17, 19, 20, 83, 23, 89}\n",
+    "set5={2, 5, 6, 8, 10, 11, 12, 24, 25, 26, 28, 29, 30, 31, 32, 35, 40, 44, 50, 52, 56, 57, 62, 63, 64, 69, 70, 71, 72, 73, 74, 75, 78, 79, 80, 84, 85, 86, 88, 90, 92, 94, 95, 96}\n",
+    "set6={}\n",
+    "set4.union(set6)\n",
+    "set5.update(set6)\n",
+    "print(set6)"
    ]
   },
   {
@@ -213,11 +308,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n",
+      "They are not equal\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5={2, 5, 6, 8, 10, 11, 12, 24, 25, 26, 28, 29, 30, 31, 32, 35, 40, 44, 50, 52, 56, 57, 62, 63, 64, 69, 70, 71, 72, 73, 74, 75, 78, 79, 80, 84, 85, 86, 88, 90, 92, 94, 95, 96}\n",
+    "set4={34, 66, 68, 7, 42, 76, 14, 48, 17, 19, 20, 83, 23, 89}\n",
+    "for i in set5:\n",
+    "    if set5.difference(set4)==0:\n",
+    "        print(\"They are equal\")\n",
+    "    else:\n",
+    "        print(\"They are not equal\")"
    ]
   },
   {
@@ -229,11 +382,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(set1.issubset(set2))\n",
+    "print(set1.issubset(set3))"
    ]
   },
   {
@@ -247,11 +411,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 5, 6, 7, 8, 10, 11, 12, 14, 17, 19, 20, 23, 24, 25, 26, 28, 29, 30, 31, 32, 34, 35, 40, 42, 44, 48, 50, 52, 56, 57, 62, 63, 64, 66, 68, 69, 70, 71, 72, 73, 74, 75, 76, 78, 79, 80, 83, 84, 85, 86, 88, 89, 90, 92, 94, 95, 96}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3={2, 5, 6, 7, 8, 10, 11, 12, 14, 17, 19, 20, 23, 24, 25, 26, 28, 29, 30, 31, 32, 34, 35, 40, 42, 44, 48, 50, 52, 56, 57, 62, 63, 64, 66, 68, 69, 70, 71, 72, 73, 74, 75, 76, 78, 79, 80, 83, 84, 85, 86, 88, 89, 90, 92, 94, 95, 96}\n",
+    "set4={34, 66, 68, 7, 42, 76, 14, 48, 17, 19, 20, 83, 23, 89}\n",
+    "set5={2, 5, 6, 8, 10, 11, 12, 24, 25, 26, 28, 29, 30, 31, 32, 35, 40, 44, 50, 52, 56, 57, 62, 63, 64, 69, 70, 71, 72, 73, 74, 75, 78, 79, 80, 84, 85, 86, 88, 90, 92, 94, 95, 96}\n",
+    "result=set3.union(set4,set5)\n",
+    "print(set3)"
    ]
   },
   {
@@ -263,11 +440,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(set1.pop())"
    ]
   },
   {
@@ -283,12 +469,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<built-in method clear of list object at 0x7f9f34044748>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "print(list_to_remove.clear)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
