--- a/module-1/lab-advanced-regex/your-code/main.ipynb
+++ b/module-1/lab-advanced-regex/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        " 'i']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "['puppy', 'puppies', 'puppy']"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "['ran', 'run']"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "['ran', 'relay', 'race', 'run']"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "'This is a sentence with special characters in it.'"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "['sente', 'words', 'varyi', 'lengt']"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -282,13 +282,13 @@
        "['bet', 'bot', 'beat', 'bot', 'bat', 'but', 'bit']"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#TERMINAAAAAAAAR\n",
+    "#TERMINAR\n",
     "\n",
     "re.findall('b\\w+', text)"
    ]
@@ -302,32 +302,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"During many of the peaks and troughs of history, the people living it didn't fully realize what was unfolding. But we all know we're navigating breathtaking history: Nearly every day could be — maybe will be — a book.\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ea', 'eople', 'ea', 'ea', 'ea']"
+       "['peaks', 'people', 'realize', 'breathtaking', 'Nearly']"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text = \"During many of the peaks and troughs of history, the people living it didn't fully realize what was unfolding. But we all know we're navigating breathtaking history: Nearly every day could be — maybe will be — a book.\"\n",
-    "re.findall('ea|eo\\w+', text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "re.findall('')"
+    "re.findall('\\w+ea\\w+|\\w+eo\\w+', text)"
    ]
   },
   {
@@ -339,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,10 +347,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Teddy', 'Roosevelt', 'Abraham', 'Lincoln']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall('([A-Z][a-z]+)', text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -362,10 +374,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Teddy Roosevelt', 'Abraham Lincoln']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall('([A-Z][a-z]+(?=\\s[A-Z])(?:\\s[A-Z][a-z]+)+)', text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -378,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,10 +412,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[',', '\"', '\"', ',', '\"', '\"']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall('[^a-zA-Z\\s\\d.$!]', text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -401,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,10 +448,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['30', '30', '14', '16', '10']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall('\\d+', text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -424,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,10 +487,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['876-93-2289', '098-32-5295']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall('\\d+\\-\\d+\\-\\d+', text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -450,16 +514,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['(847)789-0984', '(987)222-0901']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall('\\(\\d+\\)\\d+\\-\\d+', text)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 15. Use a regular expression to find and extract all the formatted numbers (both social security and phone) from the text below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['876-93-2289', '(847)789-0984', '098-32-5295', '(987)222-0901']"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall('\\d+\\-\\d+\\-\\d+|\\(\\d+\\)\\d+\\-\\d+', text)"
    ]
   },
   {
